# AlgoritmoAPA

./: CMakeLists.txt  Makefile  README.md  ils_exec  main  main.cpp  resultadosILS.txt  resutados.txt  run_all.sh  vnd_exec
CMakeLists.txt/: CMakeLists.txt
instancias/: otimas.txt
scripts/: run_all.sh  run_all_ils.sh  run_ils_inst.sh  run_inst.sh  run_inst_ils.sh  run_vnd_all.sh
src/ILS/: ILS.cpp  README.md  main.cpp
src/ILS/headers/: ILS.h
src/VND/: README.md  leitor.cpp  main.cpp  result.cpp  vizinhos.cpp  vnd.cpp
src/VND/headers/: vizinhos.h
src/VND/instancia/: instancia.txt  leitor.cpp
src/guloso/: GULOSO.md  leitor.cpp  main.cpp  source.cpp
src/guloso/headers/: source.h
